footer area complete

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
           alt="a placeholder logo"
           class="logo"
         />
-        <div class="footer-content-wrapper">
+        <div class="footer-content-wrapper separator-gradient-vertical">
           <h2 class="heading-2">
             Public High School<br />
             (Higher Secondary)
@@ -552,7 +552,7 @@
             </p>
           </div>
         </div>
-        <div class="footer-link-container">
+        <div class="footer-link-container separator-gradient-vertical">
           <h3 class="text-medium-bold">
             Section Header
             <svg class="sprite sprite--normal">
@@ -565,7 +565,7 @@
             <li class="text-small">Link Three</li>
           </ul>
         </div>
-        <div class="footer-link-container">
+        <div class="footer-link-container separator-gradient-vertical">
           <h3 class="text-medium-bold">
             Section Header
             <svg class="sprite sprite--normal">
@@ -578,7 +578,7 @@
             <li class="text-small">Link Three</li>
           </ul>
         </div>
-        <div class="footer-link-container">
+        <div class="footer-link-container separator-gradient-vertical">
           <h3 class="text-medium-bold">
             Section Header
             <svg class="sprite sprite--normal">
