--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./css/blogs.css" />
     <link rel="stylesheet" href="./css/gallery.css" />
     <link rel="stylesheet" href="./css/testimonial.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
     <script src="./js/app.js" defer></script>
     <title>Document</title>
   </head>
@@ -514,5 +515,96 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer separator-gradient">
+      <div class="social-media">
+        <p class="text-small-bold">CONNECT WITH US</p>
+        <span>
+          <svg class="sprite sprite--medium">
+            <use href="img/sprite.svg#icon-whatsapp-o"></use>
+          </svg>
+          <svg class="sprite sprite--medium">
+            <use href="img/sprite.svg#icon-youtube-o"></use>
+          </svg>
+          <svg class="sprite sprite--medium">
+            <use href="img/sprite.svg#icon-facebook-o"></use>
+          </svg>
+        </span>
+      </div>
+      <section class="footer__links">
+        <img
+          src="https://placehold.co/100"
+          alt="a placeholder logo"
+          class="logo"
+        />
+        <div class="footer-content-wrapper separator-gradient-vertical">
+          <h2 class="heading-2">
+            Public High School<br />
+            (Higher Secondary)
+          </h2>
+          <div class="location-wrapper">
+            <svg class="sprite sprite--normal">
+              <use href="img/sprite.svg#icon-location-filled"></use>
+            </svg>
+            <p class="text-small">
+              DUMDUM SOUTH, NORTH<br />TWENTY FOUR PARGANAS<br />West Bengal -
+              700 003
+            </p>
+          </div>
+        </div>
+        <div class="footer-link-container separator-gradient-vertical">
+          <h3 class="text-medium-bold">
+            Section Header
+            <svg class="sprite sprite--normal">
+              <use href="img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </h3>
+          <ul>
+            <li class="text-small">Link One</li>
+            <li class="text-small">Link Two</li>
+            <li class="text-small">Link Three</li>
+          </ul>
+        </div>
+        <div class="footer-link-container separator-gradient-vertical">
+          <h3 class="text-medium-bold">
+            Section Header
+            <svg class="sprite sprite--normal">
+              <use href="img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </h3>
+          <ul>
+            <li class="text-small">Link One</li>
+            <li class="text-small">Link Two</li>
+            <li class="text-small">Link Three</li>
+          </ul>
+        </div>
+        <div class="footer-link-container separator-gradient-vertical">
+          <h3 class="text-medium-bold">
+            Section Header
+            <svg class="sprite sprite--normal">
+              <use href="img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </h3>
+          <ul>
+            <li class="text-small">Link One</li>
+            <li class="text-small">Link Two</li>
+            <li class="text-small">Link Three</li>
+          </ul>
+        </div>
+      </section>
+      <section class="footer__nav separator-gradient">
+        <p class="text-small-extra">&copy;Public High School 2024</p>
+        <nav>
+          <ul>
+            <li class="text-small-extra">Contact us</li>
+            <li class="text-small-extra">About this site</li>
+            <li class="text-small-extra">Legal</li>
+            <li class="text-small-extra">Privacy Policy</li>
+            <li class="text-small-extra">Cookie Settings</li>
+            <li class="text-small-extra">Accessibility Statement</li>
+          </ul>
+        </nav>
+      </section>
+    </footer>
   </body>
 </html>
