admission nav-bar

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           />
           <ul class="primary-links fix-white-space">
             <li class="nav-links text-medium-bold">
-              <a href="#">ADMISSIONS</a>
+              <a href="/admission/">ADMISSIONS</a>
               <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
