--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/global.css" />
-    <link rel="stylesheet" href="./css/sprite.css" />
-    <link rel="stylesheet" href="./css/variables.css" />
-    <link rel="stylesheet" href="./css/fonts.css" />
-    <link rel="stylesheet" href="./css/animation.css" />
-    <link rel="stylesheet" href="./css/nav.css" />
-    <link rel="stylesheet" href="./css/hero.css" />
-    <link rel="stylesheet" href="./css/classes.css" />
-    <link rel="stylesheet" href="./css/facilities.css" />
-    <link rel="stylesheet" href="./css/blogs.css" />
-    <link rel="stylesheet" href="./css/gallery.css" />
-    <link rel="stylesheet" href="./css/testimonial.css" />
-    <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="stylesheet" href="./css/utils/global.css" />
+    <link rel="stylesheet" href="./css/utils/sprite.css" />
+    <link rel="stylesheet" href="./css/utils/variables.css" />
+    <link rel="stylesheet" href="./css/utils/fonts.css" />
+    <link rel="stylesheet" href="./css/utils/animation.css" />
+    <link rel="stylesheet" href="./css/utils/search-box.css" />
+    <link rel="stylesheet" href="./css/components/nav.css" />
+    <link rel="stylesheet" href="./css/components/hero.css" />
+    <link rel="stylesheet" href="./css/components/classes.css" />
+    <link rel="stylesheet" href="./css/components/facilities.css" />
+    <link rel="stylesheet" href="./css/components/blogs.css" />
+    <link rel="stylesheet" href="./css/components/gallery.css" />
+    <link rel="stylesheet" href="./css/components/testimonial.css" />
+    <link rel="stylesheet" href="./css/components/footer.css" />
     <script src="./js/app.js" defer></script>
     <title>Document</title>
   </head>
