--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/utils/fonts.css" />
     <link rel="stylesheet" href="./css/utils/animation.css" />
     <link rel="stylesheet" href="./css/utils/search-box.css" />
-    <link rel="stylesheet" href="./css/components/nav.css" />
+    <link rel="stylesheet" href="./css/components/header-type-1.css" />
     <link rel="stylesheet" href="./css/components/hero.css" />
     <link rel="stylesheet" href="./css/components/classes.css" />
     <link rel="stylesheet" href="./css/components/facilities.css" />
