admission hero section complete

--- a/admission/index.html
+++ b/admission/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="../css/utils/fonts.css" />
     <link rel="stylesheet" href="../css/utils/sprite.css" />
     <link rel="stylesheet" href="../css/utils/search-box.css" />
-    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="../css/components/header-type-2.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Admission</title>
   </head>
   <body>
@@ -106,5 +106,111 @@
         </div>
       </nav>
     </header>
+
+    <main>
+      <section class="hero">
+        <nav class="breadcrumb">
+          <ul>
+            <li class="breadcrumb-link">
+              <a href="#" class="text-small-extra-bold">Home</a>
+              <svg class="sprite sprite--normal" role="img">
+                <use href="../img/sprite.svg#icon-chevron-right"></use>
+              </svg>
+            </li>
+            <li class="breadcrumb-link">
+              <a href="#" class="text-small-extra">Admission</a>
+              <svg class="sprite sprite--normal" role="img">
+                <use href="../img/sprite.svg#icon-chevron-right"></use>
+              </svg>
+            </li>
+          </ul>
+        </nav>
+        <h1 class="heading-2">
+          ADMISSIONS
+          <svg class="sprite sprite--normal" role="img">
+            <use href="../img/sprite.svg#icon-chevron-right"></use>
+          </svg>
+        </h1>
+        <p class="text-small admission-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium,
+          ullam cumque vero maxime tempore sapiente ex veniam necessitatibus
+          ipsam natus odio consectetur veritatis. Accusamus sit natus recusandae
+          eius mollitia quam atque dolores consequatur provident dolorem, at
+          reiciendis, culpa obcaecati corporis eligendi, debitis laudantium
+          nulla sed molestias id odio vel. Doloremque.Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Praesentium, ullam cumque vero maxime
+          tempore sapiente ex veniam necessitatibus ipsam natus odio consectetur
+          veritatis. Accusamus sit natus recusandae eius mollitia quam atque
+          dolores consequatur provident dolorem, at reiciendis, culpa obcaecati
+          corporis eligendi, debitis laudantium nulla sed molestias id odio vel.
+          Doloremque.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Praesentium, ullam cumque vero maxime tempore sapiente ex veniam
+          necessitatibus ipsam natus odio consectetur veritatis. Accusamus sit
+          natus recusandae eius mollitia quam atque dolores consequatur
+          provident dolorem, at reiciendis, culpa obcaecati corporis eligendi,
+          debitis laudantium nulla sed molestias id odio vel. Doloremque.
+        </p>
+
+        <div class="admission-cards">
+          <div class="admission-card">
+            <img
+              src="https://placehold.co/256x170"
+              alt="a placeholder image"
+              class="admission-card-img"
+            />
+            <p class="admission-card__title text-medium-bold">
+              Lorem ipsum dolor sit amet consectetur.
+            </p>
+            <p class="admission-card__subtitle text-small-extra">
+              This is a description.
+            </p>
+            <ul class="admission-card__list">
+              <li class="text-small-extra">Lorem ipsum dolor sit amet.</li>
+              <li class="text-small-extra">This is a list item</li>
+              <li class="text-small-extra">This is a list item</li>
+              <li class="text-small-extra">This is a list item</li>
+            </ul>
+          </div>
+          <div class="admission-card">
+            <img
+              src="https://placehold.co/256x170"
+              alt="a placeholder image"
+              class="admission-card-img"
+            />
+            <p class="admission-card__title text-medium-bold">
+              Lorem ipsum dolor sit amet consectetur.
+            </p>
+            <p class="admission-card__subtitle text-small-extra">
+              This is a description.
+            </p>
+            <ul class="admission-card__list">
+              <li class="text-small-extra">Lorem ipsum dolor sit amet.</li>
+              <li class="text-small-extra">This is a list item</li>
+              <li class="text-small-extra">This is a list item</li>
+              <li class="text-small-extra">This is a list item</li>
+            </ul>
+          </div>
+          <div class="admission-card">
+            <img
+              src="https://placehold.co/256x170"
+              alt="a placeholder image"
+              class="admission-card-img"
+            />
+            <p class="admission-card__title text-medium-bold">
+              Lorem ipsum dolor sit amet consectetur.
+            </p>
+            <p class="admission-card__subtitle text-small-extra">
+              This is a description.
+            </p>
+            <ul class="admission-card__list">
+              <li class="text-small-extra">Lorem ipsum dolor sit amet.</li>
+              <li class="text-small-extra">This is a list item</li>
+              <li class="text-small-extra">This is a list item</li>
+              <li class="text-small-extra">This is a list item</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
