admission page complete

--- a/admission/index.html
+++ b/admission/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/utils/sprite.css" />
     <link rel="stylesheet" href="../css/utils/search-box.css" />
     <link rel="stylesheet" href="../css/components/header-type-2.css" />
+    <link rel="stylesheet" href="../css/components/footer.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Admission</title>
   </head>
@@ -150,7 +151,6 @@
           provident dolorem, at reiciendis, culpa obcaecati corporis eligendi,
           debitis laudantium nulla sed molestias id odio vel. Doloremque.
         </p>
-
         <div class="admission-cards">
           <div class="admission-card">
             <img
@@ -211,6 +211,176 @@
           </div>
         </div>
       </section>
+
+      <section class="faq">
+        <h2 class="heading-2">
+          Frequnetly Asked Questions
+          <svg class="sprite sprite--normal" role="img">
+            <use href="../img/sprite.svg#icon-chevron-right"></use>
+          </svg>
+        </h2>
+        <div class="faqs-conainter">
+          <details>
+            <summary class="text-small-bold">
+              Lorem ipsum dolor sit amet.
+            </summary>
+            <p class="text-small-extra">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio
+              nesciunt molestiae amet aperiam eaque vitae error, hic, atque
+              aspernatur sit modi vero ratione fugit ut rem fuga deserunt magnam
+              incidunt!
+            </p>
+          </details>
+          <details>
+            <summary class="text-small-bold">
+              Lorem ipsum dolor sit amet.
+            </summary>
+            <p class="text-small-extra">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio
+              nesciunt molestiae amet aperiam eaque vitae error, hic, atque
+              aspernatur sit modi vero ratione fugit ut rem fuga deserunt magnam
+              incidunt!
+            </p>
+          </details>
+          <details>
+            <summary class="text-small-bold">
+              Lorem ipsum dolor sit amet.
+            </summary>
+            <p class="text-small-extra">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio
+              nesciunt molestiae amet aperiam eaque vitae error, hic, atque
+              aspernatur sit modi vero ratione fugit ut rem fuga deserunt magnam
+              incidunt!
+            </p>
+          </details>
+          <details>
+            <summary class="text-small-bold">
+              Lorem ipsum dolor sit amet.
+            </summary>
+            <p class="text-small-extra">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio
+              nesciunt molestiae amet aperiam eaque vitae error, hic, atque
+              aspernatur sit modi vero ratione fugit ut rem fuga deserunt magnam
+              incidunt!
+            </p>
+          </details>
+          <details>
+            <summary class="text-small-bold">
+              Lorem ipsum dolor sit amet.
+            </summary>
+            <p class="text-small-extra">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio
+              nesciunt molestiae amet aperiam eaque vitae error, hic, atque
+              aspernatur sit modi vero ratione fugit ut rem fuga deserunt magnam
+              incidunt!
+            </p>
+          </details>
+        </div>
+      </section>
+
+      <section class="search">
+        <form action="get" class="search-form-large">
+          <input
+            type="search"
+            name="search-input"
+            id="search-input"
+            class="text-small"
+            placeholder="Can’t Find What You’re Looking For?"
+          />
+          <button class="text-medium btn-submit">Search</button>
+        </form>
+      </section>
     </main>
+
+    <footer class="footer separator-gradient">
+      <div class="social-media">
+        <p class="text-small-bold">CONNECT WITH US</p>
+        <span>
+          <svg class="sprite sprite--medium">
+            <use href="../img/sprite.svg#icon-whatsapp-o"></use>
+          </svg>
+          <svg class="sprite sprite--medium">
+            <use href="../img/sprite.svg#icon-youtube-o"></use>
+          </svg>
+          <svg class="sprite sprite--medium">
+            <use href="../img/sprite.svg#icon-facebook-o"></use>
+          </svg>
+        </span>
+      </div>
+      <section class="footer__links">
+        <img
+          src="https://placehold.co/100"
+          alt="a placeholder logo"
+          class="logo"
+        />
+        <div class="footer-content-wrapper separator-gradient-vertical">
+          <h2 class="heading-2">
+            Public High School<br />
+            (Higher Secondary)
+          </h2>
+          <div class="location-wrapper">
+            <svg class="sprite sprite--normal">
+              <use href="../img/sprite.svg#icon-location-filled"></use>
+            </svg>
+            <p class="text-small">
+              DUMDUM SOUTH, NORTH<br />TWENTY FOUR PARGANAS<br />West Bengal -
+              700 003
+            </p>
+          </div>
+        </div>
+        <div class="footer-link-container separator-gradient-vertical">
+          <h3 class="text-medium-bold">
+            Section Header
+            <svg class="sprite sprite--normal">
+              <use href="../img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </h3>
+          <ul>
+            <li class="text-small">Link One</li>
+            <li class="text-small">Link Two</li>
+            <li class="text-small">Link Three</li>
+          </ul>
+        </div>
+        <div class="footer-link-container separator-gradient-vertical">
+          <h3 class="text-medium-bold">
+            Section Header
+            <svg class="sprite sprite--normal">
+              <use href="../img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </h3>
+          <ul>
+            <li class="text-small">Link One</li>
+            <li class="text-small">Link Two</li>
+            <li class="text-small">Link Three</li>
+          </ul>
+        </div>
+        <div class="footer-link-container separator-gradient-vertical">
+          <h3 class="text-medium-bold">
+            Section Header
+            <svg class="sprite sprite--normal">
+              <use href="../img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </h3>
+          <ul>
+            <li class="text-small">Link One</li>
+            <li class="text-small">Link Two</li>
+            <li class="text-small">Link Three</li>
+          </ul>
+        </div>
+      </section>
+      <section class="footer__nav separator-gradient">
+        <p class="text-small-extra">&copy;Public High School 2024</p>
+        <nav>
+          <ul>
+            <li class="text-small-extra">Contact us</li>
+            <li class="text-small-extra">About this site</li>
+            <li class="text-small-extra">Legal</li>
+            <li class="text-small-extra">Privacy Policy</li>
+            <li class="text-small-extra">Cookie Settings</li>
+            <li class="text-small-extra">Accessibility Statement</li>
+          </ul>
+        </nav>
+      </section>
+    </footer>
   </body>
 </html>
