admission page complete logo added

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
       <nav class="main-nav">
         <div class="left-section">
           <img
-            src="https://placehold.co/100"
-            alt="a placeholder logo"
+            src="./img/logo.jpg"
+            alt="logo"
             class="logo"
+            width="100"
+            height="100"
           />
           <ul class="primary-links fix-white-space">
             <li class="nav-links text-medium-bold">
@@ -534,9 +536,11 @@
       </div>
       <section class="footer__links">
         <img
-          src="https://placehold.co/100"
-          alt="a placeholder logo"
+          src="./img/logo.jpg"
+          alt="logo"
           class="logo"
+          width="100"
+          height="100"
         />
         <div class="footer-content-wrapper separator-gradient-vertical">
           <h2 class="heading-2">
