--- a/admission/index.html
+++ b/admission/index.html
@@ -16,7 +16,12 @@
   <body>
     <header class="header">
       <a href="../"
-        ><img src="https://placehold.co/100" alt="logo" class="logo"
+        ><img
+          src="../img/logo.jpg"
+          alt="logo"
+          class="logo"
+          width="100"
+          height="100"
       /></a>
       <nav class="main-nav">
         <div class="top-container">
@@ -154,7 +159,7 @@
         <div class="admission-cards">
           <div class="admission-card">
             <img
-              src="https://placehold.co/256x170"
+              src="./img/admission-1.jpg"
               alt="a placeholder image"
               class="admission-card-img"
             />
@@ -173,7 +178,7 @@
           </div>
           <div class="admission-card">
             <img
-              src="https://placehold.co/256x170"
+              src="./img/admission-2.jpg"
               alt="a placeholder image"
               class="admission-card-img"
             />
@@ -192,7 +197,7 @@
           </div>
           <div class="admission-card">
             <img
-              src="https://placehold.co/256x170"
+              src="./img/admission-3.jpg"
               alt="a placeholder image"
               class="admission-card-img"
             />
@@ -220,7 +225,7 @@
           </svg>
         </h2>
         <div class="faqs-conainter">
-          <details>
+          <details name="question">
             <summary class="text-small-bold">
               Lorem ipsum dolor sit amet.
             </summary>
@@ -231,7 +236,7 @@
               incidunt!
             </p>
           </details>
-          <details>
+          <details name="question">
             <summary class="text-small-bold">
               Lorem ipsum dolor sit amet.
             </summary>
@@ -242,7 +247,7 @@
               incidunt!
             </p>
           </details>
-          <details>
+          <details name="question">
             <summary class="text-small-bold">
               Lorem ipsum dolor sit amet.
             </summary>
@@ -253,7 +258,7 @@
               incidunt!
             </p>
           </details>
-          <details>
+          <details name="question">
             <summary class="text-small-bold">
               Lorem ipsum dolor sit amet.
             </summary>
@@ -264,7 +269,7 @@
               incidunt!
             </p>
           </details>
-          <details>
+          <details name="question">
             <summary class="text-small-bold">
               Lorem ipsum dolor sit amet.
             </summary>
@@ -309,9 +314,11 @@
       </div>
       <section class="footer__links">
         <img
-          src="https://placehold.co/100"
-          alt="a placeholder logo"
+          src="../img/logo.jpg"
+          alt="logo"
           class="logo"
+          width="100"
+          height="100"
         />
         <div class="footer-content-wrapper separator-gradient-vertical">
           <h2 class="heading-2">
