--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/global.css" />
-    <link rel="stylesheet" href="./css/sprite.css" />
-    <link rel="stylesheet" href="./css/variables.css" />
-    <link rel="stylesheet" href="./css/fonts.css" />
-    <link rel="stylesheet" href="./css/animation.css" />
-    <link rel="stylesheet" href="./css/nav.css" />
-    <link rel="stylesheet" href="./css/hero.css" />
-    <link rel="stylesheet" href="./css/classes.css" />
-    <link rel="stylesheet" href="./css/facilities.css" />
-    <link rel="stylesheet" href="./css/blogs.css" />
-    <link rel="stylesheet" href="./css/gallery.css" />
-    <link rel="stylesheet" href="./css/testimonial.css" />
-    <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="stylesheet" href="./css/utils/global.css" />
+    <link rel="stylesheet" href="./css/utils/sprite.css" />
+    <link rel="stylesheet" href="./css/utils/variables.css" />
+    <link rel="stylesheet" href="./css/utils/fonts.css" />
+    <link rel="stylesheet" href="./css/utils/animation.css" />
+    <link rel="stylesheet" href="./css/utils/search-box.css" />
+    <link rel="stylesheet" href="./css/components/header-type-1.css" />
+    <link rel="stylesheet" href="./css/components/hero.css" />
+    <link rel="stylesheet" href="./css/components/classes.css" />
+    <link rel="stylesheet" href="./css/components/facilities.css" />
+    <link rel="stylesheet" href="./css/components/blogs.css" />
+    <link rel="stylesheet" href="./css/components/gallery.css" />
+    <link rel="stylesheet" href="./css/components/testimonial.css" />
+    <link rel="stylesheet" href="./css/components/footer.css" />
     <script src="./js/app.js" defer></script>
     <title>Document</title>
   </head>
@@ -30,13 +31,15 @@
       <nav class="main-nav">
         <div class="left-section">
           <img
-            src="https://placehold.co/100"
-            alt="a placeholder logo"
+            src="./img/logo.jpg"
+            alt="logo"
             class="logo"
+            width="100"
+            height="100"
           />
           <ul class="primary-links fix-white-space">
             <li class="nav-links text-medium-bold">
-              <a href="#">ADMISSIONS</a>
+              <a href="/admission/">ADMISSIONS</a>
               <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
@@ -533,9 +536,11 @@
       </div>
       <section class="footer__links">
         <img
-          src="https://placehold.co/100"
-          alt="a placeholder logo"
+          src="./img/logo.jpg"
+          alt="logo"
           class="logo"
+          width="100"
+          height="100"
         />
         <div class="footer-content-wrapper separator-gradient-vertical">
           <h2 class="heading-2">
