--- a/admission/index.html
+++ b/admission/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/utils/global.css" />
-    <link rel="stylesheet" href="../css/utils/variables.css" />
-    <link rel="stylesheet" href="../css/utils/fonts.css" />
-    <link rel="stylesheet" href="../css/utils/sprite.css" />
-    <link rel="stylesheet" href="../css/utils/search-box.css" />
-    <link rel="stylesheet" href="../css/components/header-type-2.css" />
-    <link rel="stylesheet" href="../css/components/footer.css" />
+    <link rel="stylesheet" href="../public/css/utils/global.css" />
+    <link rel="stylesheet" href="../public/css/utils/variables.css" />
+    <link rel="stylesheet" href="../public/css/utils/fonts.css" />
+    <link rel="stylesheet" href="../public/css/utils/sprite.css" />
+    <link rel="stylesheet" href="../public/css/utils/search-box.css" />
+    <link rel="stylesheet" href="../public/css/components/header-type-2.css" />
+    <link rel="stylesheet" href="../public/css/components/footer.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Admission</title>
   </head>
   <body>
     <header class="header">
-      <a href="../"
+      <a href="../public/"
         ><img
-          src="../img/logo.jpg"
+          src="../assets/img/logo.jpg"
           alt="logo"
           class="logo"
           width="100"
@@ -29,7 +29,9 @@
             <li class="nav-links text-small">
               <a href="#">ADMISSIONS</a>
               <svg class="sprite sprite--normal" role="img">
-                <use href="../img/sprite.svg#icon-chevron-down-short"></use>
+                <use
+                  href="../assets/img/sprite.svg#icon-chevron-down-short"
+                ></use>
               </svg>
               <ul class="sub-menu">
                 <li><a href="#" class="text-small-extra">List item 1</a></li>
@@ -41,7 +43,9 @@
             <li class="nav-links text-small">
               <a href="#">ACADEMICS</a>
               <svg class="sprite sprite--normal" role="img">
-                <use href="../img/sprite.svg#icon-chevron-down-short"></use>
+                <use
+                  href="../assets/img/sprite.svg#icon-chevron-down-short"
+                ></use>
               </svg>
               <ul class="sub-menu">
                 <li><a href="#" class="text-small-extra">List item 1</a></li>
@@ -53,7 +57,9 @@
             <li class="nav-links text-small">
               <a href="#">NOTICE</a>
               <svg class="sprite sprite--normal" role="img">
-                <use href="../img/sprite.svg#icon-chevron-down-short"></use>
+                <use
+                  href="../assets/img/sprite.svg#icon-chevron-down-short"
+                ></use>
               </svg>
               <ul class="sub-menu">
                 <li><a href="#" class="text-small-extra">List item 1</a></li>
@@ -65,7 +71,9 @@
             <li class="nav-links text-small">
               <a href="#">ABOUT</a>
               <svg class="sprite sprite--normal" role="img">
-                <use href="../img/sprite.svg#icon-chevron-down-short"></use>
+                <use
+                  href="../assets/img/sprite.svg#icon-chevron-down-short"
+                ></use>
               </svg>
               <ul class="sub-menu">
                 <li><a href="#" class="text-small-extra">List item 1</a></li>
@@ -78,14 +86,14 @@
           <form action="get" class="search-form">
             <input type="search" class="search-box" placeholder="Search..." />
             <svg class="sprite sprite--normal" role="img">
-              <use href="../img/sprite.svg#search"></use>
+              <use href="../assets/img/sprite.svg#search"></use>
             </svg>
           </form>
         </div>
         <div class="bottom-container">
           <h2 class="heading-2 heading-primary">ADMISSIONS</h2>
           <img
-            src="../img/SeparatorChevron.png"
+            src="../assets/img/SeparatorChevron.png"
             alt="a separator"
             class="separator-img"
           />
@@ -93,19 +101,25 @@
             <li class="text-large">
               Link One
               <svg class="sprite sprite--normal" role="img">
-                <use href="../img/sprite.svg#icon-chevron-down-short"></use>
+                <use
+                  href="../assets/img/sprite.svg#icon-chevron-down-short"
+                ></use>
               </svg>
             </li>
             <li class="text-large">
               Link Two
               <svg class="sprite sprite--normal" role="img">
-                <use href="../img/sprite.svg#icon-chevron-down-short"></use>
+                <use
+                  href="../assets/img/sprite.svg#icon-chevron-down-short"
+                ></use>
               </svg>
             </li>
             <li class="text-large">
               Link Three
               <svg class="sprite sprite--normal" role="img">
-                <use href="../img/sprite.svg#icon-chevron-down-short"></use>
+                <use
+                  href="../assets/img/sprite.svg#icon-chevron-down-short"
+                ></use>
               </svg>
             </li>
           </ul>
@@ -120,13 +134,13 @@
             <li class="breadcrumb-link">
               <a href="#" class="text-small-extra-bold">Home</a>
               <svg class="sprite sprite--normal" role="img">
-                <use href="../img/sprite.svg#icon-chevron-right"></use>
+                <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
               </svg>
             </li>
             <li class="breadcrumb-link">
               <a href="#" class="text-small-extra">Admission</a>
               <svg class="sprite sprite--normal" role="img">
-                <use href="../img/sprite.svg#icon-chevron-right"></use>
+                <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
               </svg>
             </li>
           </ul>
@@ -134,7 +148,7 @@
         <h1 class="heading-2">
           ADMISSIONS
           <svg class="sprite sprite--normal" role="img">
-            <use href="../img/sprite.svg#icon-chevron-right"></use>
+            <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
           </svg>
         </h1>
         <p class="text-small admission-content">
@@ -221,7 +235,7 @@
         <h2 class="heading-2">
           Frequnetly Asked Questions
           <svg class="sprite sprite--normal" role="img">
-            <use href="../img/sprite.svg#icon-chevron-right"></use>
+            <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
           </svg>
         </h2>
         <div class="faqs-conainter">
@@ -302,19 +316,19 @@
         <p class="text-small-bold">CONNECT WITH US</p>
         <span>
           <svg class="sprite sprite--medium">
-            <use href="../img/sprite.svg#icon-whatsapp-o"></use>
+            <use href="../assets/img/sprite.svg#icon-whatsapp-o"></use>
           </svg>
           <svg class="sprite sprite--medium">
-            <use href="../img/sprite.svg#icon-youtube-o"></use>
+            <use href="../assets/img/sprite.svg#icon-youtube-o"></use>
           </svg>
           <svg class="sprite sprite--medium">
-            <use href="../img/sprite.svg#icon-facebook-o"></use>
+            <use href="../assets/img/sprite.svg#icon-facebook-o"></use>
           </svg>
         </span>
       </div>
       <section class="footer__links">
         <img
-          src="../img/logo.jpg"
+          src="../assets/img/logo.jpg"
           alt="logo"
           class="logo"
           width="100"
@@ -327,7 +341,7 @@
           </h2>
           <div class="location-wrapper">
             <svg class="sprite sprite--normal">
-              <use href="../img/sprite.svg#icon-location-filled"></use>
+              <use href="../assets/img/sprite.svg#icon-location-filled"></use>
             </svg>
             <p class="text-small">
               DUMDUM SOUTH, NORTH<br />TWENTY FOUR PARGANAS<br />West Bengal -
@@ -339,7 +353,7 @@
           <h3 class="text-medium-bold">
             Section Header
             <svg class="sprite sprite--normal">
-              <use href="../img/sprite.svg#icon-chevron-right"></use>
+              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h3>
           <ul>
@@ -352,7 +366,7 @@
           <h3 class="text-medium-bold">
             Section Header
             <svg class="sprite sprite--normal">
-              <use href="../img/sprite.svg#icon-chevron-right"></use>
+              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h3>
           <ul>
@@ -365,7 +379,7 @@
           <h3 class="text-medium-bold">
             Section Header
             <svg class="sprite sprite--normal">
-              <use href="../img/sprite.svg#icon-chevron-right"></use>
+              <use href="../assets/img/sprite.svg#icon-chevron-right"></use>
             </svg>
           </h3>
           <ul>
