--- a/admission/index.html
+++ b/admission/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../public/css/utils/fonts.css" />
     <link rel="stylesheet" href="../public/css/utils/sprite.css" />
     <link rel="stylesheet" href="../public/css/utils/search-box.css" />
+    <link rel="stylesheet" href="../public/css/utils/breadcrumb.css" />
     <link rel="stylesheet" href="../public/css/components/header-type-2.css" />
     <link rel="stylesheet" href="../public/css/components/footer.css" />
     <link rel="stylesheet" href="./css/style.css" />
